--- a/package.json
+++ b/package.json
@@ -3,25 +3,34 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.6.2",
+    "@ant-design/icons": "^5.0.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.16.6",
+    "@types/recharts": "^1.8.29",
+    "@types/styled-components": "^5.1.34",
+    "antd": "^5.0.0",
     "apexcharts": "^3.35.3",
+    "chart.js": "^4.4.1",
     "cross-env": "^7.0.3",
     "install": "^0.13.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.3.7",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.12.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -30,9 +39,6 @@
       "react-app",
       "react-app/jest"
     ]
-  },
-  "engines": {
-    "node": "18.x"
   },
   "browserslist": {
     "production": [
@@ -47,6 +53,11 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0"
+    "@babel/core": "^7.16.0",
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@types/react-router-dom": "^5.3.3",
+    "typescript": "^4.9.5"
   }
 }
