--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/styled-components": "^5.1.34",
     "antd": "^5.0.0",
     "apexcharts": "^3.35.3",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.3.7",
